[gd_scene load_steps=5 format=2]

[ext_resource path="res://script/tchat.gd" type="Script" id=1]
[ext_resource path="res://scene/Panel duplicate.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/message.wav" type="AudioStream" id=3]
[ext_resource path="res://texture/icone_volume.png" type="Texture" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" parent="." instance=ExtResource( 2 )]
visible = true

[node name="teteBox" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -546.0
margin_right = 450.0
margin_bottom = -496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chatBox" type="Label" parent="teteBox"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teteBox2" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 450.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chatBox2" type="Label" parent="teteBox2"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox2"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notification" type="Label" parent="teteBox2"]
margin_left = 109.0
margin_top = 12.0
margin_right = 168.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.784314, 0.870588, 0.854902, 1 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuchat" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -495.919
margin_right = 450.0
margin_bottom = 4.08112
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerMain" type="HBoxContainer" parent="menuchat"]
anchor_right = 0.237
margin_left = 9.0
margin_right = 338.35
margin_bottom = 41.0
rect_min_size = Vector2( 436, 41 )
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainerChat" type="CenterContainer" parent="menuchat/HBoxContainerMain"]
margin_right = 375.0
margin_bottom = 41.0
rect_min_size = Vector2( 375, 41 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="idmsg" type="Button" parent="menuchat/HBoxContainerMain/CenterContainerChat"]
margin_right = 375.0
margin_bottom = 41.0
rect_min_size = Vector2( 375, 41 )
text = "Main Chat "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContaineMute" type="CenterContainer" parent="menuchat/HBoxContainerMain"]
margin_left = 380.0
margin_right = 427.0
margin_bottom = 41.0
rect_min_size = Vector2( 47, 41 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bouton_mute" type="Button" parent="menuchat/HBoxContainerMain/CenterContaineMute"]
margin_right = 47.0
margin_bottom = 41.0
rect_min_size = Vector2( 47, 41 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="menuchat"]
margin_left = 10.015
margin_top = 45.0
margin_right = 440.015
margin_bottom = 424.0
rect_min_size = Vector2( 430, 379 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="son_message" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="teteBox/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
[connection signal="pressed" from="teteBox2/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
