[gd_scene load_steps=2 format=2]

[ext_resource path="res://tchat.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatMain" type="RichTextLabel" parent="Panel"]
margin_left = 25.0
margin_top = 10.0
margin_right = 425.0
margin_bottom = 410.0

[node name="TextEdit" type="TextEdit" parent="Panel"]
margin_left = 25.0
margin_top = 425.0
margin_right = 325.0
margin_bottom = 465.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 350.0
margin_top = 425.0
margin_right = 420.0
margin_bottom = 465.0
text = "ENVOYER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teteBox" type="Panel" parent="."]
margin_left = 100.0
margin_right = 550.0
margin_bottom = 50.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="chatBox" type="Label" parent="teteBox"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="teteBox2" type="Panel" parent="."]
margin_left = 100.055
margin_top = 527.036
margin_right = 550.055
margin_bottom = 577.036
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="chatBox2" type="Label" parent="teteBox2"]
margin_left = 20.0
margin_top = 10.0
margin_right = 96.0
margin_bottom = 24.0
text = "CHATROOM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCroix" type="Button" parent="teteBox2"]
margin_left = 415.0
margin_top = 10.0
margin_right = 435.0
margin_bottom = 30.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="teteBox/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
[connection signal="pressed" from="teteBox2/ButtonCroix" to="." method="_on_ButtonCroix_pressed"]
